--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:onboarding": "vite --config vite.onboarding.config.ts",
+    "dev:dashboard": "vite --config vite.dashboard.config.ts",
+    "dev:settings": "vite --config vite.settings.config.ts",
+    "dev:all": "concurrently \"npm run dev:onboarding\" \"npm run dev:dashboard\" \"npm run dev:settings\"",
     "build": "vite build",
+    "build:onboarding": "vite build --config vite.onboarding.config.ts",
+    "build:dashboard": "vite build --config vite.dashboard.config.ts",
+    "build:settings": "vite build --config vite.settings.config.ts",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.2.1",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
